# advent-of-code

./: README.md
aof-2023/: Day01.fs  Day02.fs  Program.fs  aof-2023.fsproj
aof-2023/input/: day01_part01_out.txt  day01_part01_out2.txt
aopy-2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day09.py  day11.py  requirements.txt
aopy-2025/: pyproject.toml
aopy-2025/src/aopy_2025/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  utils.py
